--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -34,6 +34,6 @@
 		<PackageReference Include="xunit" Version="2.4.1" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="2.4.3" PrivateAssets="All" />
 		<PackageReference Include="coverlet.msbuild" Version="2.9.0" PrivateAssets="All" />
-		<PackageReference Update="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" PrivateAssets="All" />
+		<PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.3.0" PrivateAssets="All" />
 	</ItemGroup>
 </Project>
