--- a/tests/bunit.web.tests/bunit.web.tests.csproj
+++ b/tests/bunit.web.tests/bunit.web.tests.csproj
@@ -4,6 +4,10 @@
 		<RootNamespace>Bunit</RootNamespace>
 		<AssemblyName>Bunit.Web.Tests</AssemblyName>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Xunit.Combinatorial" Version="1.4.1" />
+	</ItemGroup>
 	
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\bunit.core\bunit.core.csproj" />
