--- a/docs/samples/tests/xunit/bunit.docs.xunit.samples.csproj
+++ b/docs/samples/tests/xunit/bunit.docs.xunit.samples.csproj
@@ -15,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="../../../../src/bunit.core/bunit.core.csproj" />
     <ProjectReference Include="../../../../src/bunit.web/bunit.web.csproj" />
     <ProjectReference Include="../../../../src/bunit.xunit/bunit.xunit.csproj" />
     <ProjectReference Include="../../components/bunit.docs.samples.csproj" />
