--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,7 +118,7 @@ jobs:
           dotnet test ${GITHUB_WORKSPACE}/TemplateTest
 
   sonarcloud:
-    if: github.event_name != 'schedule' || github.event_name != 'pull_request'
+    if: github.event_name != 'schedule' && github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
