update to docs workflow

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -41,7 +41,11 @@ jobs:
         run: dotnet build /p:PublicRelease=true
 
       - name: Verfiy docs samples
-        run: dotnet test docs/samples
+        run: |
+          dotnet test docs/samples/tests/mstest/
+          dotnet test docs/samples/tests/nunit/
+          dotnet test docs/samples/tests/razor/
+          dotnet test docs/samples/tests/xunit/
 
       - name: Building docs
         run: |    
