--- a/tests/bunit.testassets/bunit.testassets.csproj
+++ b/tests/bunit.testassets/bunit.testassets.csproj
@@ -18,6 +18,10 @@
 		<RazorLangVersion>3.0</RazorLangVersion>
 	</PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="xunit.assert" Version="2.4.1" />
+	</ItemGroup>
+	
 	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
 		<PackageReference Include="Microsoft.AspNetCore.Components" Version="3.1.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.1" />
