--- a/tests/Directory.Build.props
+++ b/tests/Directory.Build.props
@@ -19,10 +19,10 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net5.0' AND $(MSBuildProjectName) != 'bunit.testassets'">
-		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0-rc.2.*" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0-rc.2.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0-rc.2.*" />
-		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0-rc.2.*" />
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="5.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components" Version="5.0.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.0" />
 	</ItemGroup>
 
 	<ItemGroup Condition="$(MSBuildProjectName) != 'bunit.testassets'">
