Updated changelog, renamed render methods in TestContextBase for better overloading possibilities in the future

--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,9 +22,9 @@ jobs:
         with:
           setAllVars: true
 
-      - name: Setting VERSION
-        run: echo "::set-env name=VERSION::$NBGV_NuGetPackageVersion"
-      
+      - name: Setting VERSION env
+        run: echo "VERSION=$NBGV_NuGetPackageVersion" >> $GITHUB_ENV
+
       - name: Update tokens in project files
         uses: cschleiden/replace-tokens@v1
         with:
