Added additional tests, implemented #258

--- a/src/bunit.template/bunit.template.csproj
+++ b/src/bunit.template/bunit.template.csproj
@@ -35,4 +35,8 @@
 		<None Remove="template\obj\**" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Include="..\..\.editorconfig" Link=".editorconfig" />
+	</ItemGroup>
+
 </Project>
