Update to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -191,7 +191,7 @@ jobs:
         uses: github/codeql-action/analyze@v1
 
   publish-nuget-packages:
-    if: (github.event_name == 'push' && github.ref == 'refs/heads/dev') || github.event_name == 'release'
+    if: github.event_name == 'push' || github.event_name == 'release'
     needs: [dotnet-build, dotnet-test, verify-template]
     runs-on: ubuntu-latest
     steps:
