Fixes to workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -223,14 +223,14 @@ jobs:
           dotnet-version: '5.0.x'
 
       - name: Creating library package for pre-release
-        if: github.event_name != 'release'
+        if: github.ref != 'refs/heads/main'
         run: |
           dotnet pack -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true
           dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true
           dotnet pack src/bunit.template/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true
 
       - name: Creating library package for release
-        if: github.event_name == 'release'
+        if: github.ref == 'refs/heads/main'
         run: |
           dotnet pack -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true /p:PublicRelease=true
           dotnet pack src/bunit/ -c Release -o ${GITHUB_WORKSPACE}/packages -p:RepositoryBranch=$BRANCH -p:ContinuousIntegrationBuild=true /p:PublicRelease=true
